got jar file running